@@ -1,3 +1,10 @@
 update configure.in to ac
-fix fullscreen->window->fullscreen mouse motion cap
 xdg support
+
+Known Bugs:
+SDL does not properly get curser position if switching from 
+fullscreen to Window and back. It's stuck to wrong 640x480 from
+window mode not allowing to reach the far end of the shooting range.
+No workaround known. Just decide whether to play in fullscreen or
+window and stick to it.
+
